--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="site-wide-alert alert alert-warning">
                         <strong>Sale Now On!</strong> We've got a sale on. Get a 12 months subscription for the price of
                         6.
-                        <a href="">See here for details!</a>
+                        <a href="/">See here for details!</a>
                     </div>
                 </div>
             </div>
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-dark navbar-expand-sm">
             <a href="/" class="navbar-brand">
                 Whiskey Drop</a>
-
+                
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span></button>
@@ -60,11 +60,12 @@
                 <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door</i></p>
                 <a href="/login" class="btn btn--cta btn--red">Sign In / Sign Up</a>
             </div>
-            <!--</div>-->
         </nav>
     </div>
+    <!-- .nav -->
+
+    <!-- Callout -->
     <div class="container-fluid callout-container">
-        <!-- Callout -->
         <div class="opaque-overlay">blabla</div>
         <div class="row">
             <div class="col-12">
@@ -82,8 +83,9 @@
                 </section>
             </div>
         </div>
-        <!-- /.callout -->
     </div>
+    <!-- / .callout -->
+
     <!-- Quotes -->
     <div class="container-wrapper">
         <div class="container quotes-container content-container">
@@ -127,9 +129,10 @@
                     </div>
                 </div>
             </section>
-            <!-- /.quotes -->
         </div>
     </div>
+    <!-- /.quotes -->
+
     <!-- Features -->
     <div class="container-wrapper container-wrapper--red">
         <div class="features-container content-container content-container-feat">
